--- a/index.html
+++ b/index.html
@@ -2,424 +2,12 @@
 <html>
 <head>
     <meta charset='utf-8' />
-    <title>California Water</title>
+    <title>Blank</title>
     <meta name='robots' content='noindex, nofollow'>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <link href='https://fonts.googleapis.com/css?family=Fira+Sans' rel='stylesheet'>    
-    <script src='https://static-assets.mapbox.com/gl-pricing/dist/mapbox-gl.js'></script>
-    <link href='https://static-assets.mapbox.com/gl-pricing/dist/mapbox-gl.css' rel='stylesheet' />
-    <style>
-        body { margin:0; padding:0; }
-        h2 {
-            margin: 10px;
-            font-size: 1.2em;
-        }
-        h3 {
-            margin: 10px;
-            font-weight: normal;
-            font-size: 1em;
-        }
-        p {
-            font-size: 0.85em;
-            margin: 10px;
-            text-align: left;
-        }
-        .blue-text {
-            color: rgba(88, 166, 185, 1);
-        }
-        .map-overlay {
-            position: absolute;
-            bottom: 0;
-            right: 0;
-            height: 100%;
-            background: rgba(250, 250, 250, 0.8);
-            border-radius: 3px;
-        }
 
-        .map-overlay-text {
-            padding: 20px;
-            font-family: Fira Sans, sans-serif;
-            overflow: auto;        
-            padding-top: 120px;
-        }
-
-        #map {
-            position:absolute;
-            top:0;
-            bottom:0;
-            width:100%;         
-        }
-
-        #features {
-            top: 0;
-            height: 100%;
-            margin-top: 0px;
-            width: 350px;
-        }
-
-        #legend {
-            position:absolute;
-            right: 0px;
-            bottom:0px;
-            padding: 10px;
-            box-shadow: 0 1px 2px rgba(0,0,0,0.10);
-            line-height: 12px;
-            height: 50px;
-            margin-bottom: 40px;
-            width: 200px;
-            font-family: Fira Sans, sans-serif;
-            font-size:1em;
-        }
-
-        .legend-key {
-
-            border-radius: 20%;
-            width: 10px;
-            height: 10px;
-            margin-right: 5px;
-
-        }
-
-        .titlebox {
-            position: absolute;
-            background-image: linear-gradient(to right, rgba(88, 166, 185, 0.8), rgba(88, 166, 185, 0.8), rgba(88, 166, 185, 0.8), rgba(250,250,250,0));
-            top: 0px;
-            left: 0px;  
-            right: 0px;  
-            box-shadow: 1px 1px 2px black;      
-        }
-
-        .title {
-            font-family: 'Fira Sans';font-size: 50px;
-            color:#FFFFFF;
-            padding:20px;
-            padding-left: 30px;
-           
-        }
-
-        .mapboxgl-popup {
-            max-width: 400px;
-            font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
-            /*color:rgba(0, 0, 0, 1);*/
-        }
-
-        .mapboxgl-popup-content {
-        position: relative;
-        background: rgba(255, 255, 255, 0.85);
-        border-radius: 1px;
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-        padding: 3px 3px 3px;
-        pointer-events: auto;
-        }
-
-        .name-box{
-            position: absolute;
-            left: 90px;
-            bottom:0px;
-            padding:10px;
-            font-family: Fira Sans, sans-serif;
-            font-size:0.75em;
-            color:white;
-            text-shadow: .5px .8px 2px black; 
-        }
-
-    </style>
 </head>
 <body>
-
-
-<div id='map'></div>
-
-
-<script>
-mapboxgl.accessToken = 'pk.eyJ1IjoicGhpbGlwaHVhIiwiYSI6ImNqbW1lZXo1djBpNHUzdm55MG9iaGR6MjgifQ.qfiyw2S6WLkjE4cmfGrgUA';
-var datalayer = 'output_map_20190509_01-36-04-cpp5jz';
-var recur_length = 5;
-var lines_on_map = [];
-// Map Bounds
-var bounds = [
-    [-130, 30],
-    [-107, 45] 
-];
-
-var map = new mapboxgl.Map({
-    container: 'map',
-    style: 'mapbox://styles/philiphua/cjvbln1cg9ym71fqxl8ruc2vk?fresh=true',
-    center: [-116.567,37.598],
-    zoom: 5.62,
-    maxBounds: bounds
-});
-
-var mouse_popup = new mapboxgl.Popup({
-    closeButton: false,
-    closeOnClick: false
-});
-
-var basin_popup = new mapboxgl.Popup({
-    closeButton: false,
-    closeOnClick: false
-});
-
-
-// Makes List
-function makeUL(input) {
-    var list = document.createElement('ul');
-    for(i in input) {
-        var item = document.createElement('li');
-        if (input[i] != "null") {
-            item.appendChild(document.createTextNode(input[i]));
-            list.appendChild(item); 
-        }
-
-    }
-    return list;
-}
-
-function draw_line(source_name, target_name) {
-    
-    if (source_name == null || target_name == null) {
-        return;
-    }
-    if (source_name == target_name) {
-        return;
-    }
-    var source_coordinates = get_coordinates(source_name);
-    var target_coordinates = get_coordinates(target_name);
-
-    if (source_coordinates == null || target_coordinates == null) {
-        return;
-    }
-    // console.log("Drawing line from " + source_name + " to " + target_name);
-
-    var id = "line" + source_name + target_name;
-    if (lines_on_map.includes(id)) {
-        return;
-    } else {
-        lines_on_map.push(id);
-        return map.addLayer({
-            "id": "line" + source_name + target_name,
-            "type": "line",
-            "source": {
-                "type": "geojson",
-                "data": {
-                    "type": "Feature",
-                    "properties": {},
-                    "geometry": {
-                        "type": "LineString",
-                        "coordinates": [
-                        source_coordinates,
-                        target_coordinates
-                        ]
-                    }
-                }
-            },
-            "layout": {
-                "line-join": "round",
-                "line-cap": "round"
-            },
-            "paint": {
-                "line-color": "#424242",
-                "line-width": 1,
-                "line-dasharray": [2, 2]
-            } 
-            });   
-    }
-
-}
-
-function get_coordinates(target_name){
-    // console.log("Trying to get name for " + target_name);
-    if (target_name != null && get_properties(target_name) != null) {
-        return get_properties(target_name)['geometry']['coordinates']
-    }
-    return null;
-}
-
-function get_properties(target_name){
-    // console.log("Trying to get properties for " + target_name);
-    var prop = map.querySourceFeatures('composite', {sourceLayer: datalayer, filter : ['in', 'id', target_name]});
-    if (prop != null) {
-        return prop[0];
-    }
-    return null;
-}
-
-function show_sources(target_name, recur_length){
-    // console.log("Trying to get popup for " + target_name);
-     if (target_name.substring(0,2) == "GX" && recur_length == 5) {
-        return show_targets(target_name);
-    }
-    if (recur_length < 1) {
-        return;
-    }
-    try {
-        var sources = get_properties(target_name).properties.source;
-    } catch (err) {
-        console.log("Cannot find " + target_name);
-    }
-
-
-    if (sources != null) {
-        sources = sources.replace(/[\[\]\"]/g,"").split(',');
-        // console.log(sources);
-        sources.forEach(function(s) {
-            draw_line(s, target_name);
-            show_sources(s, recur_length - 1);
-        });
-    }
-}
-
-function show_targets(target_name) {
-    targets = get_targets(target_name);
-    targets.forEach(function(s) {
-        draw_line(target_name, s.properties.id);
-        show_popup(basin_popup, s.properties.cname);   
-    });
-}
-
-function get_targets(target_name) {
-    var all_points = map.querySourceFeatures('composite', {sourceLayer: datalayer});
-    var result = [];
-    if (all_points != null) {
-        all_points.forEach(function(s){
-            var sources = s.properties.source;
-            if (sources != null) {
-                if (sources.indexOf(target_name) > -1) {
-                    result.push(s);
-                }
-            }
-        });
-    }
-    return result;
-}
-
-function show_popup(popup, target_name){
-    popup.setLngLat(get_coordinates(target_name))
-    .setHTML(get_properties(target_name).properties.cname)
-    .addTo(map);  
-}
-
-function clear_lines(){
-    var remove_me = lines_on_map.pop();
-    while (remove_me != null) {
-        try {
-            map.removeLayer(remove_me);
-            map.removeSource(remove_me);
-        } catch (err) {
-
-        }
-        remove_me = lines_on_map.pop();
-    }
-}
-
-function show_info(target_name){
-       //Show Popup 
-        show_popup(mouse_popup, target_name) 
-        //Draw source lines
-        show_sources(target_name, recur_length);
-        //Highlight the point's corresponding area
-        map.setFilter('ws_area', ['in', 'id', target_name]);        
-        show_text(target_name);
-}
-
-function clear_text(){
-    document.getElementById('pd').innerHTML = '<p>Click a shaded area to see more information!</p>';
-}
-
-function show_text(target_name){
-    var ul = document.createElement('ul');
-    var source_names = [];    
-    if (target_name.substring(0,2) == "GX") {
-        try {
-            var basin_name = get_properties(target_name).properties.cname;
-            var sources = get_targets(target_name);
-            console.log(sources);
-        } catch (err) {
-            console.log(err)
-            console.log("Cannot find " + target_name);
-        }
-
-        sources.forEach(function(s) {
-            source_names.push(s.properties.cname);
-        });
-        console.log(source_names);
-        document.getElementById('pd').innerHTML = "<h3><strong>Ground Water Basin <BR>" + basin_name + "</strong></h3></h3><p>has sold water to the following agencies:</p>";
-        document.getElementById('pd').appendChild(makeUL(source_names));  
-    } else {
-        try {
-            var sources = get_properties(target_name).properties.source;
-        } catch (err) {
-            console.log("Cannot find " + target_name);
-        }
-        sources = sources.replace(/[\[\]\"]/g,"").split(',');
-        sources.forEach(function(s) {
-            source_names.push(get_properties(s).properties.cname);
-        })
-        document.getElementById('pd').innerHTML = "<br><h3><strong>" + target_name + "</strong><br> </h3><p>has bought water from the following agencies:</p>";  
-        document.getElementById('pd').appendChild(makeUL(source_names));     
-    }
-}
-
-map.on('load', function () {
-   
-	map.on('click', function (e) {
-        //User clicks on an area in ws_selector
-        var clicked_features = map.queryRenderedFeatures(e.point, {
-            layers: ['ws_selector']
-        })
-
-        if (clicked_features.length > 0) {
-            show_info(clicked_features[0].properties.id);
-        }
-
-        //User clicks on a point in ws_points
-        var clicked_points = map.queryRenderedFeatures(e.point, {
-            layers: ['ws_points']
-        })
-
-        if (clicked_points.length > 0) {
-            show_info(clicked_points[0].properties.id);
-        }        
-    });
-
-
-	map.on('mouseenter', 'ws_points', function (e) {
-        show_info(e.features[0].properties.id);
-        //Change mouse to pointer
-        map.getCanvas().style.cursor = 'pointer';
-	});
-
-	map.on('mouseleave', 'ws_selector', function () {
-	   map.getCanvas().style.cursor = '';
-       clear_lines();
-	});
-	// Map Controls
-	map.addControl(new mapboxgl.NavigationControl());
-})
-
-
-
-</script>
-<div class='map-overlay'>
-<div class='map-overlay-text' id='features'>
-    <h2>Where does your water come from?</h2>
-    <h3>This webmap maps data collected by the Berkeley Water Center.<br><br> The map takes in transaction data between water agencies and visualizes who has bought water from who. </h3>
-    <br><br>
-    <div class='blue-text' id='pd'><p>Click on a point to see more information!</p></div></div>
-
-</div>
-<div class='legend' id='legend'>
-<span class='legend-key' style="background-color:#e92bdc">&nbsp;&nbsp;&nbsp;</span>
-Groundwater Basin<br><br> 
-<span class='legend-key' style="background-color:#5368c6">&nbsp;&nbsp;&nbsp;</span>
-Water District
-
-</div>
-<div class="titlebox">
-<div class="title">California Water</div>
-</div>
-<div class='name-box'> Philip Hua 2019 </div>
-
-
+There is nothing here.
 </body>
 </html>
