--- a/watermap.html
+++ b/watermap.html
@@ -72,7 +72,6 @@
         }
 
         .legend-key {
-
             border-radius: 20%;
             width: 10px;
             height: 10px;
@@ -192,15 +191,15 @@ var recur_length = 5;
 var lines_on_map = [];
 // Map Bounds
 var bounds = [
-    [-130, 30],
-    [-107, 45] 
+    [-130, 28],
+    [-105, 47] 
 ];
 
 var map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/philiphua/cjvbln1cg9ym71fqxl8ruc2vk?fresh=true',
-    center: [-116.567,37.598],
-    zoom: 5.62,
+    center: [-123.5,38.22],
+    zoom: 2,
     maxBounds: bounds
 });
 
@@ -474,7 +473,7 @@ Water District
 <div class="titlebox">
 <div class="title">California Water</div>
 </div>
-<div class='name-box'> Philip Hua 2019 </div>
+<div class='name-box'> Philip Hua 2019 v0.3</div>
 
 
 </body>
