--- a/watermap.html
+++ b/watermap.html
@@ -456,7 +456,7 @@ map.on('load', function () {
 <div class='map-overlay'>
 <div class='map-overlay-text' id='features'>
     <h2>Where does your water come from?</h2>
-    <h3>This webmap maps data collected by the Berkeley Water Center.<br><br> The map takes in transaction data between water agencies and visualizes who has bought water from who. </h3>
+    <h3>This webmap maps data collected by the Berkeley Water Center on to GeoData by the California Department of Water Resources.<br><br> The map takes in transaction data between water agencies and visualizes who has bought water from whom. </h3>
     
     <br class='line-break'/><br class='line-break'/>
     
@@ -473,7 +473,7 @@ Water District
 <div class="titlebox">
 <div class="title">California Water</div>
 </div>
-<div class='name-box'> Philip Hua 2019 v0.3</div>
+<div class='name-box'> Philip Hua 2019 v0.4</div>
 
 
 </body>
