--- a/watermap.html
+++ b/watermap.html
@@ -456,7 +456,7 @@ map.on('load', function () {
 <div class='map-overlay'>
 <div class='map-overlay-text' id='features'>
     <h2>Where does your water come from?</h2>
-    <h3>This webmap maps data collected by the Berkeley Water Center on to GeoData by the California Department of Water Resources.<br><br> The map takes in transaction data between water agencies and visualizes who has bought water from whom. </h3>
+    <h3>This webmap maps transaction data collected by the Berkeley Water Center onto geospatial data by the California Department of Water Resources.<br><br> The map takes in transaction data between water agencies and visualizes who has bought water from whom. </h3>
     
     <br class='line-break'/><br class='line-break'/>
     
